--- a/spring-boot-distributedlock/src/main/resources/application.properties
+++ b/spring-boot-distributedlock/src/main/resources/application.properties
@@ -8,14 +8,6 @@ mybatis.type-aliases-package=com.darren.center.sprintboot.entity
 #开启下划线到驼峰的自动转换（将数据库字段按照驼峰规则自动注入到对象属性）
 mybatis.configuration.map-underscore-to-camel-case=true
 
-############## 连接池 ##############
-#https://blog.csdn.net/tb_520/article/details/79676543（spring boot 2.1.0 新版配置）
-#在本地使用&amp;来进行转义，会造成中文乱码
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/darren_service_center?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&autoReconnectForPools=true
-spring.datasource.username=root
-spring.datasource.password=1234
-
 ############## ThymeLeaf ##############
 #禁用thymeleaf页面缓存 default: true
 spring.thymeleaf.cache=false
@@ -27,7 +19,5 @@ spring.thymeleaf.mode=LEGACYHTML5
 ############## log ##############
 logging.level.com.darren.center.springboot.dao=debug
 
-############## redis ##############
-spring.redis.host=127.0.0.1
-spring.redis.port=6379
-spring.redis.password=
+############## custom config ##############
+spring.profiles.active=dev
