--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 	<modules>
 		<module>spring-boot-distributedlock</module>
 		<module>spring-boot-utils</module>
+		<module>spring-boot-security</module>
     </modules>
 
     <parent>
