--- a/spring-boot-distributedlock/src/main/resources/application-dev.properties
+++ b/spring-boot-distributedlock/src/main/resources/application-dev.properties
@@ -2,9 +2,9 @@
 #https://blog.csdn.net/tb_520/article/details/79676543（spring boot 2.1.0 新版配置）
 #在本地使用&amp;来进行转义，会造成中文乱码
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/darren_service_center?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&autoReconnectForPools=true
+spring.datasource.url=jdbc:mysql://localhost:3306/darren_service_center?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&autoReconnectForPools=true
 spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.password=
 
 ############## redis ##############
 spring.redis.host=127.0.0.1
