--- a/spring-boot-beetl/src/main/resources/application.properties
+++ b/spring-boot-beetl/src/main/resources/application.properties
@@ -13,3 +13,6 @@ logging.level.com.darren.center.springboot.dao=debug
 
 ############## custom config ##############
 spring.profiles.active=dev
+
+############## beetl config ##############
+beetl.suffix=html
