--- a/spring-boot-beetl/src/main/resources/application-dev.properties
+++ b/spring-boot-beetl/src/main/resources/application-dev.properties
@@ -4,7 +4,7 @@
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/darren_service_center?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&autoReconnectForPools=true
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=1234
 
 ############## redis ##############
 spring.redis.host=127.0.0.1
