--- a/spring-boot-beetl/src/main/resources/application.properties
+++ b/spring-boot-beetl/src/main/resources/application.properties
@@ -16,3 +16,11 @@ spring.profiles.active=dev
 
 ############## beetl config ##############
 beetl.suffix=html
+beetl.templatesPath=templates
+beetl.title=Darren
+#½â¾ö±àÂë´íÎó
+server.tomcat.uri-encoding=UTF-8
+spring.http.encoding.charset=UTF-8
+spring.http.encoding.enabled=true
+spring.http.encoding.force=true
+spring.messages.encoding=UTF-8
